added api login details

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div id="api-content" class="hidden mt-2 bg-white rounded-lg shadow-md p-4">
                 <ul class="list-disc pl-6">
                     <li><a href="https://n00rs.github.io/nutraacs-API-documentation/get_credit_limit" class="text-blue-600 hover:underline">Get Credit Limit</a></li>
+                    <li><a href="https://n00rs.github.io/nutraacs-API-documentation/api_login_for_airlines" class="text-blue-600 hover:underline">Api Login For Airlines</a></li>
+                    
                     <!-- Add more API links here as needed -->
                 </ul>
             </div>
