updated login details error messages

--- a/get_airline_customer.html
+++ b/get_airline_customer.html
@@ -33,7 +33,11 @@
 <pre><code>[
   {
     "strCustomerCode": "IN0098",
-    "strCustomerName": "noorsha"
+    "strCustomerName": "JANE"
+  },
+  {
+    "strCustomerCode": "IN0178",
+    "strCustomerName": "JON"
   }
 ]</code></pre>
 
