updated login details error messages

--- a/api_login_for_airlines.html
+++ b/api_login_for_airlines.html
@@ -78,7 +78,8 @@
       <tbody>
         <tr><td>Password not provided</td><td>400</td><td><pre>{"errCommon":[{"strMessage":"PASSWORD_MISSING"}]}</pre></td></tr>
         <tr><td>Username not provided</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "USERNAME_MISSING"}] }</pre></td></tr>
-        <tr><td>Customer Code not provided</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "CUSTOMER_MISSING"}] }</pre></td></tr>
+        <tr><td>Customer code not provided</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "CUSTOMER_MISSING"}] }</pre></td></tr>
+        <tr><td>Invalid username</td><td>400</td><td><pre>{"errCommon":[{"strMessage":"INVALID_LOGIN_CREDENTIALS"}]}</pre></td></tr>
         <tr><td>Invalid password</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "PASSWORD_MISMATCH"}] }</pre></td></tr>
         <tr><td>Invalid customer code</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "INVALID_CUSTOMER"}] }</pre></td></tr>
         <tr><td>API user not found</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "API_USER_NOT_FOUND"}] }</pre></td></tr>
