added changes mentioned by product Owner

--- a/api_login_for_airlines.html
+++ b/api_login_for_airlines.html
@@ -26,7 +26,7 @@
 
   <section>
     <h2>1. Purpose</h2>
-    <p>This document explains how Ethiopian Airlines (and other integrated customers) can authenticate with <strong>NutraACS</strong> using the API Integration login method.</p>
+    <p>This document explains how Ethiopian Airlines (and other integrated customers) can authenticate with <strong>nuTRAACS</strong> using the API Integration login method.</p>
   </section>
 
   <section>
@@ -46,7 +46,7 @@
         <tr><td><code>strPassword</code></td><td>string</td><td>Password associated with the integration user</td></tr>
         <tr><td><code>authType</code></td><td>string</td><td>Use <code>API_INTEGRATION</code> for API integrations </td></tr>
         <tr><td><code>strCustomerCode</code></td><td>string</td><td>Customer code retrieved from <code>/api/tenancy/tenancy/get_customers</code></td></tr>
-        <tr><td><code>strApplicationCode</code></td><td>string</td><td>Application code (e.g., <code>LITE</code>)</td></tr>
+        <tr><td><code>strApplicationCode</code></td><td>string</td><td>Application code (e.g., <code>nuTRAACS</code>)</td></tr>
       </tbody>
     </table>
   </section>
@@ -58,7 +58,7 @@
   "strPassword": "D@v&q1W2E3",
   "authType": "API_INTEGRATION",
   "strCustomerCode": "ABA001",
-  "strApplicationCode": "LITE"
+  "strApplicationCode": "nuTRAACS"
 }</pre>
   </section>
 
