changes in application code

--- a/api_login_for_airlines.html
+++ b/api_login_for_airlines.html
@@ -79,6 +79,7 @@
         <tr><td>Password not provided</td><td>400</td><td><pre>{"errCommon":[{"strMessage":"PASSWORD_MISSING"}]}</pre></td></tr>
         <tr><td>Username not provided</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "USERNAME_MISSING"}] }</pre></td></tr>
         <tr><td>Customer code not provided</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "CUSTOMER_MISSING"}] }</pre></td></tr>
+        <tr><td>Application code provided is invalid</td><td>400</td><td><pre>{"errCommon":[{"strMessage":"INVALID_APPLICATION_CODE"}]}</pre></td></tr>
         <tr><td>Invalid username</td><td>400</td><td><pre>{"errCommon":[{"strMessage":"INVALID_LOGIN_CREDENTIALS"}]}</pre></td></tr>
         <tr><td>Invalid password</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "PASSWORD_MISMATCH"}] }</pre></td></tr>
         <tr><td>Invalid customer code</td><td>400</td><td><pre>{ "errCommon": [{"strMessage": "INVALID_CUSTOMER"}] }</pre></td></tr>
