--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <ul class="list-disc pl-6">
                     <li><a href="https://n00rs.github.io/nutraacs-API-documentation/get_credit_limit" class="text-blue-600 hover:underline">Get Credit Limit</a></li>
                     <li><a href="https://n00rs.github.io/nutraacs-API-documentation/api_login_for_airlines" class="text-blue-600 hover:underline">Api Login For Airlines</a></li>
-                        <li><a href="https://n00rs.github.io/nutraacs-API-documentation/get_airline_customer" class="text-blue-600 hover:underline">Get Airline Customer</a></li>
+                    <li><a href="https://n00rs.github.io/nutraacs-API-documentation/get_airline_customer" class="text-blue-600 hover:underline">Get Airline Customer</a></li>
+                    <li><a href="https://n00rs.github.io/nutraacs-API-documentation/refund_cancel_ticket_query" class="text-blue-600 hover:underline">Ticket Refund Cancel</a></li>
                     
                     <!-- Add more API links here as needed -->
                 </ul>
